fix z-index on header-container in wide modes

--- a/css/main.css
+++ b/css/main.css
@@ -492,8 +492,9 @@ article {
     INTERMEDIATE: Menu
    ==================== */
    .header-container {
-    position: fixed;
-    width: 100%;
+        position: fixed;
+        width: 100%;
+        z-index: 2;
    }
 
     nav {
@@ -674,6 +675,12 @@ article {
     .header-container,
     .main aside {
      
+    }
+
+    .header-container {
+        position: fixed;
+        width: 100%;
+        z-index: 2;
     }
 
     .main {
